# openrpc-client-generator-cli

./: pyproject.toml
openrpc_client_generator_cli/: __init__.py  generate.py
tests/: test_openrpc_client_generator_cli.py
