[tool.poetry]
name = "openrpc-client-generator-cli"
version = "0.2.1"
description = ""
authors = ["Matthew Burkard <matthewjburkard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
openrpcclientgenerator = {path = "../openrpc-client-generator/dist/openrpcclientgenerator-0.23.3.tar.gz"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
